Revision history for Perl module HTML::ParseBrowser

1.04

    - Correctly recognise Opera Mini

1.03 2012-01-15

    - Now recognise OmniWeb
    - Added testcases for all recognised languages
    - Language code for Danish was wrong (was 'dn', is now 'da')
    - Language code for Japanese was wrong (was 'jp', is now 'ja')
    - Simplified the language code, which also made it a lot faster.
      Profiling showed that this was really impacting overall performance:
      running the benchmark test from my review previously took ~35s,
      now it takes ~7s.

1.02 2012-01-14

    - Fixed all warnings generated by running a large test corpus past
      the module. The big coverage test for my review article now
      runs cleanly.
    - Tidied up documentation, made it a bit less rude about Vista :-)
    - Hadn't put release date of 1.01 in this file (Changes)
    - Removed version number from README, so I don't have to update it
      on every release

1.01 2012-01-13

    - Fixed handling of Safari version numbers
    - Added tests for IE 8, 9, 10
    - Improved support for Opera including correct handling of version numbers
    - Added Russian to language recognition
    - Recognises Windows 7 and Windows 8
    - Min version of Perl 5.004 and improved META keywords (from CHORNY)
    - Now recognises Chrome
    - Fixed bug which meant lang(), language() and friends didn't work
    - Fixed warnings about use of undefined values
    - Added a DESTROY method to fix warning caused by AUTOLOAD trying
      to handle DESTROY
    - Now use strict and warnings

1.0 2008-07-16

    - updates

0.5 2001-08-14

	- original version
